[gd_scene load_steps=9 format=3 uid="uid://ck2nk7cixtn1s"]

[ext_resource type="TileSet" uid="uid://bjtphgbwnhelx" path="res://Assets/bgtiles.tres" id="1_gwh8p"]
[ext_resource type="Script" path="res://Scenes/level_18.gd" id="1_m8thu"]
[ext_resource type="TileSet" uid="uid://5txfr7411rug" path="res://Assets/maptiles.tres" id="2_bs87i"]
[ext_resource type="PackedScene" uid="uid://bci7tjxoe75mn" path="res://Scenes/finish_flag.tscn" id="3_oeduv"]
[ext_resource type="PackedScene" uid="uid://b2ku6ali5xjaw" path="res://Scenes/character_1.tscn" id="4_oaie4"]
[ext_resource type="PackedScene" uid="uid://rfxd6a0f3352" path="res://Scenes/character_2.tscn" id="5_j2ta7"]
[ext_resource type="PackedScene" uid="uid://bvfbdpnjy8xh8" path="res://Scenes/character_3.tscn" id="6_qg73b"]
[ext_resource type="PackedScene" uid="uid://bgmlveeipn3us" path="res://Scenes/ui.tscn" id="7_l814q"]

[node name="Level18" type="Node2D"]
script = ExtResource("1_m8thu")

[node name="BG" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("1_gwh8p")
format = 2
layer_0/tile_data = PackedInt32Array(0, 589824, 0, 1, 655360, 0, 2, 720896, 0, 65536, 589824, 0, 65537, 655360, 0, 65538, 720896, 0, 131072, 589824, 0, 131073, 655360, 0, 131074, 720896, 0, 196608, 589824, 1, 196609, 655360, 1, 196610, 720896, 1, 262144, 589824, 2, 262145, 655360, 2, 262146, 720896, 2, 327680, 655360, 3, 327681, 655360, 3, 327682, 655360, 3, 393216, 655360, 3, 393217, 655360, 3, 393218, 655360, 3, 458752, 655360, 3, 458753, 655360, 3, 458754, 655360, 3, 524288, 655360, 3, 524289, 655360, 3, 524290, 655360, 3, 3, 589824, 0, 4, 655360, 0, 5, 720896, 0, 65539, 589824, 0, 65540, 655360, 0, 65541, 720896, 0, 131075, 589824, 0, 131076, 655360, 0, 131077, 720896, 0, 196611, 589824, 1, 196612, 655360, 1, 196613, 720896, 1, 262147, 589824, 2, 262148, 655360, 2, 262149, 720896, 2, 327683, 655360, 3, 327684, 655360, 3, 327685, 655360, 3, 393219, 655360, 3, 393220, 655360, 3, 393221, 655360, 3, 458755, 655360, 3, 458756, 655360, 3, 458757, 655360, 3, 524291, 655360, 3, 524292, 655360, 3, 524293, 655360, 3, 6, 589824, 0, 7, 655360, 0, 8, 720896, 0, 65542, 589824, 0, 65543, 655360, 0, 65544, 720896, 0, 131078, 589824, 0, 131079, 655360, 0, 131080, 720896, 0, 196614, 589824, 1, 196615, 655360, 1, 196616, 720896, 1, 262150, 589824, 2, 262151, 655360, 2, 262152, 720896, 2, 327686, 655360, 3, 327687, 655360, 3, 327688, 655360, 3, 393222, 655360, 3, 393223, 655360, 3, 393224, 655360, 3, 458758, 655360, 3, 458759, 655360, 3, 458760, 655360, 3, 524294, 655360, 3, 524295, 655360, 3, 524296, 655360, 3, 9, 589824, 0, 10, 720896, 0, 65545, 589824, 0, 65546, 720896, 0, 131081, 589824, 0, 131082, 720896, 0, 196617, 589824, 1, 196618, 655360, 1, 262153, 589824, 2, 262154, 655360, 2, 327689, 655360, 3, 327690, 655360, 3, 393225, 655360, 3, 393226, 655360, 3, 458761, 655360, 3, 458762, 655360, 3, 524297, 655360, 3, 524298, 655360, 3, 589824, 589824, 3, 655360, 589824, 3, 720896, 589824, 3, 786432, 589824, 3, 917504, 589824, 3, 983040, 589824, 3, 1048576, 589824, 3, 1114112, 589824, 3, 1179648, 589824, 3, 1245184, 589824, 3, 589825, 589824, 3, 655361, 589824, 3, 720897, 589824, 3, 786433, 589824, 3, 917505, 589824, 3, 983041, 589824, 3, 1048577, 589824, 3, 1114113, 589824, 3, 1179649, 589824, 3, 1245185, 589824, 3, 589826, 589824, 3, 655362, 589824, 3, 720898, 589824, 3, 786434, 589824, 3, 983042, 589824, 3, 1048578, 589824, 3, 1114114, 589824, 3, 589827, 589824, 3, 655363, 589824, 3, 720899, 589824, 3, 786435, 589824, 3, 983043, 589824, 3, 1048579, 589824, 3, 1114115, 589824, 3, 589828, 655360, 3, 655364, 589824, 3, 720900, 589824, 3, 786436, 589824, 3, 983044, 589824, 3, 1048580, 589824, 3, 1245188, 589824, 3, 589829, 655360, 3, 655365, 655360, 3, 720901, 589824, 3, 983045, 589824, 3, 1114117, 589824, 3, 589830, 589824, 3, 655366, 655360, 3, 720902, 589824, 3, 1114118, 589824, 3, 589831, 589824, 3, 655367, 655360, 3, 720903, 589824, 3, 589832, 589824, 3, 655368, 655360, 3, 720904, 589824, 3, 589833, 589824, 3, 655369, 655360, 3, 720905, 589824, 3, 589834, 655360, 3, 655370, 655360, 3, 720906, 589824, 3, 589835, 655360, 3, 655371, 655360, 3, 720907, 589824, 3, 524299, 655360, 3, 458763, 655360, 3, 393227, 655360, 3, 327691, 655360, 3, 262155, 720896, 2, 196619, 720896, 1, 131083, 720896, 0, 11, 720896, 0, 65547, 720896, 0)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("2_bs87i")
format = 2
layer_0/name = "Dets"
layer_1/name = "Dets2"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "bg"
layer_2/modulate = Color(0.780392, 0.690196, 0.6, 1)
layer_2/tile_data = PackedInt32Array()
layer_3/name = "MAP"
layer_3/tile_data = PackedInt32Array(196618, 458752, 2, 262154, 458752, 2, 327690, 458752, 2, 393226, 458752, 2, 458762, 458752, 2, 589834, 458752, 2, 655370, 458752, 2, 720906, 458752, 2, 524298, 458752, 2, -1, 458752, 2, 65535, 458752, 2, 131071, 458752, 2, 196607, 458752, 2, 262143, 458752, 2, 327679, 458752, 2, 393215, 458752, 2, 458751, 458752, 2, 524287, 458752, 2, 589823, 458752, 2, 655359, 458752, 2, 720895, 458752, 2, 786431, 458752, 2, -65536, 458752, 2, -65535, 458752, 2, -65534, 458752, 2, -65533, 458752, 2, -65532, 458752, 2, -65531, 458752, 2, -65530, 458752, 2, -65529, 458752, 2, -65528, 458752, 2, -65527, 458752, 2, -65526, 458752, 2, 65546, 458752, 2, 131082, 458752, 2, 10, 458752, 2, 196615, 65536, 0, 196616, 131072, 0, 196617, 196608, 0, 196614, 393216, 7, 65541, 0, 1, 131077, 0, 6, 196613, 0, 6, 262149, 196608, 6, 327685, 131072, 7, 327686, 131072, 0, 327687, 131072, 0, 327688, 196608, 1, 327689, 393216, 7, 393224, 0, 6, 458760, 0, 7, 524295, 0, 1, 589830, 131072, 1, 589831, 196608, 6, 655369, 196608, 0, 655368, 131072, 1, 655367, 131072, 7, 655366, 131072, 7, 655360, 65536, 0, 655361, 131072, 0, 655362, 131072, 0, 655363, 131072, 0, 655364, 131072, 0, 655365, 131072, 0, 589824, 393216, 7, 524288, 393216, 7, 524289, 65536, 0, 524290, 131072, 0, 524291, 131072, 0, 524293, 196608, 1, 524292, 131072, 0, 589829, 65536, 6, 327680, 65536, 0, 327681, 131072, 0, 327682, 131072, 0, 327683, 131072, 0, 327684, 131072, 7, 262148, 65536, 1, 458761, 393216, 7)
layer_4/name = "Grid"
layer_4/modulate = Color(1, 1, 1, 0.564706)
layer_4/tile_data = PackedInt32Array(327680, 3, 0, 327681, 65539, 0, 327682, 65539, 0, 327683, 65539, 0, 327684, 65539, 7, 327685, 65539, 7, 262148, 3, 1, 262149, 131075, 6, 196613, 3, 4, 131077, 3, 4, 65541, 3, 3, 196615, 3, 0, 196616, 65539, 0, 196617, 131075, 0, 327686, 65539, 0, 327687, 65539, 0, 327688, 131075, 1, 393224, 3, 4, 458760, 3, 5, 524289, 3, 0, 524290, 65539, 0, 524291, 65539, 0, 524292, 65539, 0, 524293, 131075, 1, 589829, 3, 6, 589830, 65539, 1, 589831, 131075, 6, 524295, 3, 3, 655360, 3, 0, 655361, 65539, 0, 655362, 65539, 0, 655363, 65539, 0, 655364, 65539, 0, 655365, 65539, 0, 655366, 65539, 7, 655367, 65539, 7, 655368, 65539, 0, 655369, 131075, 0)

[node name="FinishFlag" parent="." instance=ExtResource("3_oeduv")]
position = Vector2(288, 144)

[node name="FinishFlag2" parent="." instance=ExtResource("3_oeduv")]
position = Vector2(504, 432)

[node name="FinishFlag3" parent="." instance=ExtResource("3_oeduv")]
position = Vector2(576, 576)

[node name="Character1" parent="." instance=ExtResource("4_oaie4")]
position = Vector2(648, 144)

[node name="Character2" parent="." instance=ExtResource("5_j2ta7")]
position = Vector2(288, 648)

[node name="Character3" parent="." instance=ExtResource("6_qg73b")]
position = Vector2(0, 288)

[node name="UI" parent="." instance=ExtResource("7_l814q")]
metadata/_edit_use_anchors_ = true
